==> adafruit/circuitpython/ports/analog/supervisor/port.c <==
#include <stdint.h>
#include <stdio.h>
#include "supervisor/background_callback.h"
#include "supervisor/board.h"
#include "supervisor/port.h"
#include "common-hal/microcontroller/Pin.h"
#include "shared-bindings/microcontroller/__init__.h"
#include "max32_port.h"
#include "mxc_delay.h"
#include "rtc.h"
#define MSEC_TO_SS_ALARM(x) (0 - ((x * 4096) / 1000))

safe_mode_t port_init(void) {
    int err = E_NO_ERROR;

    // 1ms tick timer
    SysTick_Config(SystemCoreClock / 1000);
    NVIC_EnableIRQ(SysTick_IRQn);

    // Enable GPIO (enables clocks + common init for ports)
    for (int i = 0; i < MXC_CFG_GPIO_INSTANCES; i++) {
        err = MXC_GPIO_Init(0x1 << i);
        if (err) {
            return SAFE_MODE_PROGRAMMATIC;
        }
    }

    // Enable clock to RTC peripheral
    MXC_GCR->clkctrl |= MXC_F_GCR_CLKCTRL_ERTCO_EN;
    while (!(MXC_GCR->clkctrl & MXC_F_GCR_CLKCTRL_ERTCO_RDY)) {
        ;
    }

    NVIC_EnableIRQ(RTC_IRQn);
    NVIC_EnableIRQ(USB_IRQn);

    // Init RTC w/ 0sec, 0subsec
    // Driven by 32.768 kHz ERTCO, with ssec= 1/4096 s
    while (MXC_RTC_Init(0, 0) != E_SUCCESS) {
    }
    ;

    // enable 1 sec RTC SSEC alarm
    MXC_RTC_DisableInt(MXC_F_RTC_CTRL_SSEC_ALARM_IE);
    MXC_RTC_SetSubsecondAlarm(MSEC_TO_SS_ALARM(1000));
    MXC_RTC_EnableInt(MXC_F_RTC_CTRL_SSEC_ALARM_IE);

    // Enable RTC
    while (MXC_RTC_Start() != E_SUCCESS) {
    }
    ;

    return SAFE_MODE_NONE;
}

void reset_to_bootloader(void) {
    NVIC_SystemReset();
    while (true) {
        __NOP();
    }
}

uint64_t port_get_raw_ticks(uint8_t *subticks) {
    // Ensure we can read from ssec register as soon as we can
    // MXC function does cross-tick / busy checking of RTC controller
    if (MXC_RTC->ctrl & MXC_F_RTC_CTRL_EN) {
        // NOTE: RTC_GetTime always returns BUSY if RTC is not running
        while ((MXC_RTC_GetTime(&sec, &subsec)) != E_NO_ERROR) {
            ;
        }
    } else {
        sec = MXC_RTC->sec;
        subsec = MXC_RTC->ssec;
    }

    // Return ticks given total subseconds
    // ticks = TICKS/s * s + subsec/ subs/tick
    uint64_t raw_ticks = ((uint64_t)TICKS_PER_SEC) * sec + (subsec / SUBSEC_PER_TICK);

    if (subticks) {
        // subticks may only be filled to a resn of 1/4096 in some cases
        // e.g. multiply by 32 / 8 = 4 to get true 1/32768 subticks
        *subticks = (32 / (SUBSEC_PER_TICK)) * (subsec - (subsec / SUBSEC_PER_TICK));
    }

    return raw_ticks;
}

void port_enable_tick(void) {
    while (MXC_RTC_Start() == E_BUSY) {
        ;
    }
}

void port_disable_tick(void) {
    while (MXC_RTC_Stop() == E_BUSY) {
        ;
    }
}

void port_interrupt_after_ticks(uint32_t ticks) {
    uint32_t ticks_msec = 0;

    ticks_msec = (ticks / TICKS_PER_SEC) * 1000;

    // Disable RTC interrupts
    MXC_RTC_DisableInt(MXC_F_RTC_CTRL_SSEC_ALARM_IE |
        MXC_F_RTC_CTRL_TOD_ALARM_IE | MXC_F_RTC_CTRL_RDY_IE);

    // Stop RTC & store current time & ticks
    port_get_raw_ticks(NULL);

    // Clear the flag to be set by the RTC Handler
    tick_flag = 0;

    // Subsec alarm is the starting/reload value of the SSEC counter.
    // ISR triggered when SSEC rolls over from 0xFFFF_FFFF to 0x0
    while (MXC_RTC_SetSubsecondAlarm(MSEC_TO_SS_ALARM(ticks_msec)) != E_SUCCESS) {
    }

    MXC_RTC_EnableInt(MXC_F_RTC_CTRL_SSEC_ALARM_IE);

}

void port_idle_until_interrupt(void) {
    #if CIRCUITPY_RTC
    // Check if alarm triggers before we even got here
    if (MXC_RTC_GetFlags() == (MXC_F_RTC_CTRL_TOD_ALARM | MXC_F_RTC_CTRL_SSEC_ALARM)) {
        return;
    }
    #endif

    // Interrupts should be disabled to ensure the ISR queue is flushed
    // WFI still returns as long as the interrupt flag toggles;
    // only when we re-enable interrupts will the ISR function trigger
    common_hal_mcu_disable_interrupts();
    if (!background_callback_pending()) {
        __DSB();
        /** DEBUG: may comment out WFI for debugging port functions */
        // __WFI();
    }
    common_hal_mcu_enable_interrupts();
}
