==> adafruit/circuitpython/ports/mimxrt10xx/supervisor/port.c <==
#include "supervisor/board.h"
#include "supervisor/port.h"
#include "fsl_device_registers.h"
#include "common-hal/audiobusio/__init__.h"
#include "common-hal/microcontroller/Pin.h"
#include "common-hal/rtc/RTC.h"
#include "common-hal/busio/SPI.h"
#include "shared-bindings/microcontroller/__init__.h"
#include "shared-module/_pew/PewPew.h"
#include "reset.h"
#include "supervisor/background_callback.h"
#include "supervisor/linker.h"
#include "supervisor/shared/tick.h"
#include "clocks.h"
#include "sdk/drivers/igpio/fsl_gpio.h"
#include "sdk/drivers/lpuart/fsl_lpuart.h"
#define DEVICE 2
#define NORMAL 0
#define NO_EXECUTION 1
#define EXECUTION 0
#define NOT_SHAREABLE 0
#define SHAREABLE 1
#define NOT_CACHEABLE 0
#define CACHEABLE 1
#define NOT_BUFFERABLE 0
#define BUFFERABLE 1
#define NO_SUBREGIONS 0
    #define FlexSPI_AMBA_BASE FlexSPI1_AMBA_BASE

safe_mode_t port_init(void) {
    #if IMXRT10XX
    CLOCK_SetMode(kCLOCK_ModeRun);
    #endif

    clocks_init();

    // Turn on the DWT so that neopixel_write can use CYCCNT for timing.
    CoreDebug->DEMCR |= CoreDebug_DEMCR_TRCENA_Msk;
    DWT->CTRL = 0x2 << DWT_CTRL_SYNCTAP_Pos | DWT_CTRL_CYCCNTENA_Msk;

    // Enable SWO if needed.
    #if CIRCUITPY_SWO_TRACE

    // Turn on the 528 MHz clock to the TPIU.
    CLOCK_EnableClock(kCLOCK_Trace); /* Make these edits*/
    /* Set TRACE_PODF. */
    CLOCK_SetDiv(kCLOCK_TraceDiv, 0); /* Make these edits*/
    /* Set Trace clock source. */
    CLOCK_SetMux(kCLOCK_TraceMux, 0); /* Make these edits*/

    ITM->TCR = ITM_TCR_TSENA_Msk | ITM_TCR_ITMENA_Msk | ITM_TCR_SYNCENA_Msk | ITM_TCR_DWTENA_Msk;

    // Run at 2.75 mbaud. CP2102N says it can do up to 3.
    // Base clock is 528 mhz (not 500 like the core).
    // TPI->ACPR = 191;
    // Run at 1 mbaud so that USB isn't bottlenecked.
    TPI->ACPR = 527;
    TPI->SPPR = 0x2; // NRZ aka UART
    TPI->FFCR = 0;

    IOMUXC_SetPinMux( /* Add these lines*/
        IOMUXC_GPIO_AD_09_ARM_TRACE_SWO,
        0U);
    IOMUXC_SetPinConfig( /* Add these lines*/
        IOMUXC_GPIO_AD_09_ARM_TRACE_SWO,
        0x00F9U);

    // Enable ports 0-4:
    // * 0 is serial output
    // *
    // * 3 is addresses of functions beginning.
    // * 4 is addresses of functions ending.
    ITM->TER |= 0x1f;
    ITM->PORT[0].u8 = 'C';
    ITM->PORT[0].u8 = 'P';
    ITM->PORT[0].u8 = '\n';
    #endif

    // Set all peripheral interrupt priorities to the lowest priority by default.
    for (uint16_t i = 0; i < NUMBER_OF_INT_VECTORS; i++) {
        NVIC_SetPriority(i, (1UL << __NVIC_PRIO_BITS) - 1UL);
    }
    #ifdef MIMXRT1042_SERIES
    #define USB_OTG1_IRQn USB_OTG_IRQn
    #endif
    NVIC_SetPriority(USB_OTG1_IRQn, 1);
    #ifdef USBPHY2
    NVIC_SetPriority(USB_OTG2_IRQn, 1);
    #endif

    NVIC_SetPriority(FLEXRAM_IRQn, 0);
    NVIC_EnableIRQ(FLEXRAM_IRQn);

    // Priorities 8+ will be disabled during flash operations. To run during
    // flash operations, ensure all code is in RAM (not flash) and set the
    // priority < 8.

    #if CIRCUITPY_RTC
    rtc_init();
    #endif

    // Always enable the SNVS interrupt. The GPC won't wake us up unless at least one interrupt is
    // enabled. It won't occur very often so it'll be low overhead.
    #if IMXRT11XX
    NVIC_EnableIRQ(SNVS_HP_NON_TZ_IRQn);
    #else
    NVIC_EnableIRQ(SNVS_HP_WRAPPER_IRQn);
    #endif

    #if IMXRT11XX
    /* Save SRSR to another register so we can read it later. */
    SRC->GPR[11] = SRC->SRSR;
    SRC->SRSR = 0xFFFFFFFFU;

    if ((SRC->GPR[11] & SRC_SRSR_M7_LOCKUP_M7_MASK) != 0) {
        return SAFE_MODE_HARD_FAULT;
    }
    #endif

    // Note that `reset_port` CANNOT GO HERE, unlike other ports, because `board_init` hasn't been
    // run yet, which uses `never_reset` to protect critical pins from being reset by  `reset_port`.

    if (board_requests_safe_mode()) {
        return SAFE_MODE_USER;
    }

    return SAFE_MODE_NONE;
}

void reset_to_bootloader(void) {
    DBL_TAP_REG = DBL_TAP_MAGIC;
    reset();
}

uint64_t port_get_raw_ticks(uint8_t *subticks) {
    uint64_t ticks = 0;
    uint64_t next_ticks = 1;
    while (ticks != next_ticks) {
        ticks = next_ticks;
        next_ticks = ((uint64_t)SNVS->HPRTCMR) << 32 | SNVS->HPRTCLR;
    }
    if (subticks != NULL) {
        *subticks = ticks % 32;
    }
    return ticks / 32;
}

void port_enable_tick(void) {
    uint32_t hpcr = SNVS->HPCR;
    hpcr &= ~SNVS_HPCR_PI_FREQ_MASK;
    SNVS->HPCR = hpcr | SNVS_HPCR_PI_FREQ(5) | SNVS_HPCR_PI_EN_MASK;
}

void port_disable_tick(void) {
    SNVS->HPCR &= ~SNVS_HPCR_PI_EN_MASK;
}

void port_interrupt_after_ticks(uint32_t ticks) {
    uint8_t subticks;
    uint64_t current_ticks = port_get_raw_ticks(&subticks);
    current_ticks += ticks;
    SNVS->HPCR &= ~SNVS_HPCR_HPTA_EN_MASK;
    // Wait for the alarm to be disabled.
    while ((SNVS->HPCR & SNVS_HPCR_HPTA_EN_MASK) != 0) {
    }
    SNVS->HPTAMR = current_ticks >> (32 - 5);
    SNVS->HPTALR = current_ticks << 5 | subticks;
    SNVS->HPCR |= SNVS_HPCR_HPTA_EN_MASK;
}

void port_idle_until_interrupt(void) {
    // App note here: https://www.nxp.com/docs/en/application-note/AN12085.pdf
    // Currently I have disabled the setting into wait mode as this impacts lots of different
    // subsystems and it is unclear if you can or should set it generically without having
    // a better understanding of user intent.  For example by default it will kill PWM
    // when in this mode, unless PWM_CTRL2_WAITEN_MASK is set, and even with this set
    // it may not work properly if the same timer/subtimer is trying to PWM on multiple channels.
    // Maybe at later date, revisit after we have a better understanding on things like which
    // timers it impacts and how each subsystem is configured.

    // Clear the FPU interrupt because it can prevent us from sleeping.
    if (__get_FPSCR() & ~(0x9f)) {
        __set_FPSCR(__get_FPSCR() & ~(0x9f));
        (void)__get_FPSCR();
    }

    common_hal_mcu_disable_interrupts();
    if (!background_callback_pending()) {
        #if IMXRT11XX
        NVIC_ClearPendingIRQ(SNVS_HP_NON_TZ_IRQn);
        #else
        NVIC_ClearPendingIRQ(SNVS_HP_WRAPPER_IRQn);
        #endif
        __WFI();
    }
    common_hal_mcu_enable_interrupts();
}
